install/base/testapp/overlays/next/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
spec:
  selector:
    matchLabels:
      version: next
  template:
    metadata:
      labels:
        version: next
