install/base/testapp/overlays/next/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: www
spec:
  selector:
    version: next
