install/base/testapp/overlays/next/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs
spec:
  gateways:
    - sites-gateway
  hosts:
    - next.brudi.com
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: next-sites-www
            port:
              number: 3000
